--- a/Styles/global.css
+++ b/Styles/global.css
@@ -19,9 +19,44 @@
 --gray-400:#878EA1; 
 --gray-500:#C0C4CE; 
 --gray-600:#E2E4E9;
+
+--font-family-Asap: 'Asap', sans-serif;
+--font-family-Inconsolata: 'Inconsolata', sans-serif;
+--font-family-Maven-Pro: 'Maven+Pro', sans-serif;
+
+--title-lg: 700 56px/120% var(--font-family-Asap);
+--title-md: 700 24px/120% var(--font-family-Asap);
+--title-sm: 450 16px/120% var(--font-family-Asap);
+
+--subtitle: 700 20px/120% var(--font-family-Inconsolata);
+
+--text-md: 500 16px/140% var(--font-family-Maven-Pro);
+--text-sm: 400 14px/140% var(--font-family-Maven-Pro);
+
 }
 
 body {
+  font: var(--title-lg);
   background-color: var(--gray-300);
   color: var(--gray-600)
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+  font: var(--text-sm);
+  }
+  a:hover{
+   color: var(--blue);  
+  }
+
+  h1 {
+  font: var(--title-lg);  
+  }
+  h2 {
+  font: var(--title-md);  
+  }
+  h3 {
+  font: var(--title-sm);  
+  }
+
