--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,1 +1,7 @@
 @import url(global.css);
+@import url(style.css);
+
+/*
+@import url(utility.css);
+@import url(header.css);
+@import url(sections.css);
