--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,39 +1,99 @@
 body{
-
-
+background-color: var(--gray-300);
+color: var(--gray-600);
 }
 
-main{
-  background-color: var(--gray-300);
-border: 3px solid red
-;
+
+header{
+background-image: url(../Assets/Imagens/Background_Intro.png);
+width: 1340px;
+height: 750px;
+object-fit: contain;
+}
+
+.topo {
+display: flex;
+height: 100vh;
 }
 
 .parte-1 {
-border: 1px solid rgb(65, 224, 158)
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 .avatar {
-border: 1px solid blue
+object-fit: cover;
+margin-top: 115px;
+margin-bottom: 40px;
 }
 
 .hello{
-border: 1px solid rgb(224, 4, 169)
+font: var(--text-sm);
+color: rgb(209, 217, 248);
+text-decoration-line: overline;
+justify-content: center;
+text-align: center;
+letter-spacing: 3px;
 }
 
 .desenvolvedor{
-border: 1px solid rgb(190, 230, 11)
+width: 680px;
+height: 67px;
+font: var(--title-lg);
+color: #3ba1f3 ;
+justify-content: center;
+text-align: center;
+margin-bottom: 15PX;
 }
 
 .textfinal{
-border: 1px solid rgb(206, 241, 227)
+font: var(--title-tx);
+color: rgb(209, 217, 248);
+justify-content: center;
+text-align: center;
+letter-spacing: 2px;
+margin-bottom: 130PX;
 }
 
 .parte-2{
-border: 1px solid rgb(216, 119, 9)
+width: auto;
+height: 40px;
+display: flex;
+justify-content: center;
+gap: 16px;
+}
+
+.item {
+display: flex;
+background-color: var(--gray-300);
+border-radius: 14px;
+align-items: center;
+}
+
+.icon{
+ width: 17px;
+height: 17px; 
+margin: 12px;
+}
+
+.caret-double-dow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;  
+}
+
+.edumar{
+  color: #f24807;
 }
 
 
-
-
-
+.teste {
+ align-items: center;
+ 
+}
+.boton {
+margin: -4px 14px -6px 0;
+font: var(--text-md);
+}
